--- a/index.html
+++ b/index.html
@@ -48,14 +48,17 @@
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
+    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body class="bg-[#0a0a0a] text-[#f5f5f7] selection:bg-white selection:text-black">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
